# embedding_dimension_limit

./: .gitignore  README.md  best_case_optimization.ipynb  bm25_benchmark.py  colbert_benchmark.py  domain_shift_finetuning.ipynb  embedding_limit_best_case_optimization.ipynb  generate_qrel_matrix.py  limit-benchmark-finetuned-models.ipynb  limit-dataset.ipynb  limit_dataset_benchmark_models.ipynb  pyproject.toml  qrel_effects.ipynb  train_set_attribute_generation.py  train_set_attribute_generation_prompt.md  training_set_attribute_generation.py
notebooks/: best_case_optimization.ipynb  domain_shift_finetuning.ipynb  domain_shift_finetuning.requirements.txt  limit_dataset_benchmark_models.ipynb  qrel_effects.ipynb  qrel_effects.requirements.txt
