[project]
name = "embedding-dimension-limit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pylate>=1.3.4",
    "pymilvus[milvus-lite]>=2.6.5",
    "sentence-transformers>=5.1.1",
]
